--- a/whiteboard.html
+++ b/whiteboard.html
@@ -49,6 +49,9 @@
                         </svg>
                         Need Support?
                     </a>
+                    <a href="https://www.luxsolutions.tech/" target="_blank">
+                        <img src="logo.png" alt="Logo" style="width: 20px; display: block; margin: 10px auto 0;">
+                    </a>
                 </div>
             </div>
         </aside>
