--- a/whiteboard.html
+++ b/whiteboard.html
@@ -50,7 +50,7 @@
                         Need Support?
                     </a>
                     <a href="https://www.luxsolutions.tech/" target="_blank">
-                        <img src="logo.png" alt="Logo" style="width: 20px; display: block; margin: 10px auto 0;">
+                        <img src="logo.png" alt="Lux Solutions Logo" class="sidebar-logo">
                     </a>
                 </div>
             </div>
