--- a/whiteboard.html
+++ b/whiteboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whiteboard</title>
+    <title>Whiteboard - Harold Cross</title>
     <link rel="icon" type="image/png" href="assets/favicon-32x32.png">
     <link rel="stylesheet" href="app.css?v=6">
 </head>
@@ -60,7 +60,7 @@
         <main class="main-content">
             <header class="main-header main-header-flex">
                 <button id="mobile-menu-toggle" class="mobile-menu-btn hidden-desktop">☰</button>
-                <h1>Whiteboard</h1>
+                <h1>Whiteboard - Harold Cross</h1>
             </header>
             <section class="tasks-grid">
                 <!-- Introduction Card (New Feature) -->
@@ -80,7 +80,7 @@
                 </div>
 
                 <!-- Permanent task cards -->
-                <div class="task-card non-deletable" data-group="coordinators" data-type="todo">
+                <div class="task-card non-deletable" data-group="coordinators" data-type="todo" data-color="pink">
                     <div class="card-header">
                         <h3>Admitted to Hospital</h3>
                         <button class="add-task-item-btn">+</button>
@@ -88,7 +88,7 @@
                     <ul><!-- Tasks will be added here dynamically --></ul>
                 </div>
 
-                <div class="task-card non-deletable" data-group="coordinators" data-type="done">
+                <div class="task-card non-deletable" data-group="coordinators" data-type="done" data-color="pink">
                     <div class="card-header">
                         <h3>Returned from Hospital</h3>
                     </div>
@@ -138,22 +138,6 @@
                 <div class="task-card non-deletable" data-group="sick-carers" data-type="done" data-color="orange">
                     <div class="card-header">
                         <h3>Sick Carers Returned</h3>
-                    </div>
-                    <ul></ul>
-                </div>
-
-                <!-- Carers to come in (Pink) -->
-                <div class="task-card non-deletable" data-group="carers-come-in" data-type="todo" data-color="pink">
-                    <div class="card-header">
-                        <h3>Carers to come in</h3>
-                        <button class="add-task-item-btn">+</button>
-                    </div>
-                    <ul></ul>
-                </div>
-
-                <div class="task-card non-deletable" data-group="carers-come-in" data-type="done" data-color="pink">
-                    <div class="card-header">
-                        <h3>Done - Carers to come in</h3>
                     </div>
                     <ul></ul>
                 </div>
