--- a/whiteboard.html
+++ b/whiteboard.html
@@ -80,20 +80,7 @@
                 </div>
 
                 <!-- Permanent task cards -->
-                <div class="task-card non-deletable" data-group="coordinators" data-type="todo">
-                    <div class="card-header">
-                        <h3>Admitted to Hospital</h3>
-                        <button class="add-task-item-btn">+</button>
-                    </div>
-                    <ul><!-- Tasks will be added here dynamically --></ul>
-                </div>
 
-                <div class="task-card non-deletable" data-group="coordinators" data-type="done">
-                    <div class="card-header">
-                        <h3>Returned from Hospital</h3>
-                    </div>
-                    <ul><!-- Completed tasks will go here --></ul>
-                </div>
 
                 <div class="task-card non-deletable" data-group="supervisors" data-type="todo">
                     <div class="card-header">
@@ -143,6 +130,22 @@
                 </div>
 
 
+
+                <!-- Coordinators (Pink) -->
+                <div class="task-card non-deletable" data-group="coordinators" data-type="todo" data-color="pink">
+                    <div class="card-header">
+                        <h3>To Do - Coordinators</h3>
+                        <button class="add-task-item-btn">+</button>
+                    </div>
+                    <ul></ul>
+                </div>
+
+                <div class="task-card non-deletable" data-group="coordinators" data-type="done" data-color="pink">
+                    <div class="card-header">
+                        <h3>Tasks done - Coordinators</h3>
+                    </div>
+                    <ul></ul>
+                </div>
 
                 <!-- Carers on Holiday (Indigo) -->
                 <div class="task-card non-deletable" data-group="holiday" data-type="todo" data-color="indigo">
