--- a/whiteboard.html
+++ b/whiteboard.html
@@ -80,8 +80,20 @@
                 </div>
 
                 <!-- Permanent task cards -->
+                <div class="task-card non-deletable" data-group="coordinators" data-type="todo">
+                    <div class="card-header">
+                        <h3>Admitted to Hospital</h3>
+                        <button class="add-task-item-btn">+</button>
+                    </div>
+                    <ul><!-- Tasks will be added here dynamically --></ul>
+                </div>
 
-
+                <div class="task-card non-deletable" data-group="coordinators" data-type="done">
+                    <div class="card-header">
+                        <h3>Returned from Hospital</h3>
+                    </div>
+                    <ul><!-- Completed tasks will go here --></ul>
+                </div>
                 <div class="task-card non-deletable" data-group="supervisors" data-type="todo">
                     <div class="card-header">
                         <h3>To Do - Supervisors</h3>
