--- a/whiteboard.html
+++ b/whiteboard.html
@@ -80,7 +80,7 @@
                 </div>
 
                 <!-- Permanent task cards -->
-                <div class="task-card non-deletable" data-group="coordinators" data-type="todo">
+                <div class="task-card non-deletable" data-group="hospital" data-type="todo">
                     <div class="card-header">
                         <h3>Admitted to Hospital</h3>
                         <button class="add-task-item-btn">+</button>
@@ -88,7 +88,7 @@
                     <ul><!-- Tasks will be added here dynamically --></ul>
                 </div>
 
-                <div class="task-card non-deletable" data-group="coordinators" data-type="done">
+                <div class="task-card non-deletable" data-group="hospital" data-type="done">
                     <div class="card-header">
                         <h3>Returned from Hospital</h3>
                     </div>
