--- a/whiteboard.html
+++ b/whiteboard.html
@@ -80,7 +80,8 @@
                 </div>
 
                 <!-- Permanent task cards -->
-                <div class="task-card non-deletable" data-group="hospital" data-type="todo" data-color="cyan">
+                <!-- Permanent task cards -->
+                <div class="task-card non-deletable" data-group="hospital" data-type="todo" data-color="pink">
                     <div class="card-header">
                         <h3>Admitted to Hospital</h3>
                         <button class="add-task-item-btn">+</button>
@@ -88,7 +89,7 @@
                     <ul><!-- Tasks will be added here dynamically --></ul>
                 </div>
 
-                <div class="task-card non-deletable" data-group="hospital" data-type="done" data-color="cyan">
+                <div class="task-card non-deletable" data-group="hospital" data-type="done" data-color="pink">
                     <div class="card-header">
                         <h3>Returned from Hospital</h3>
                     </div>
