--- a/whiteboard.html
+++ b/whiteboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiteboard</title>
     <link rel="icon" type="image/png" href="assets/favicon-32x32.png">
-    <link rel="stylesheet" href="app.css?v=30">
+    <link rel="stylesheet" href="app.css?v=31">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
                 <div class="task-card non-deletable" data-group="introduction" data-type="todo">
                     <div class="card-header">
                         <h3>Introduction (Schedule)</h3>
-                        <button class="add-task-item-btn">+</button>
+                        <button id="glasnevin-intro-add-btn" class="add-task-item-btn">+</button>
                     </div>
                     <ul id="introduction-list"><!-- Tasks grouped by date will go here --></ul>
                 </div>
